@@ -74,7 +74,6 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 import org.apache.commons.collections.keyvalue.AbstractMapEntry;
-import org.apache.commons.io.IOUtils;
 import org.apache.commons.vfs2.FileContent;
 import org.apache.commons.vfs2.FileObject;
 import org.apache.commons.vfs2.FileSystemException;
@@ -3443,9 +3442,15 @@ public class Util extends XOMUtil {
     {
         InputStream in = readVirtualFile(catalogUrl);
         try {
-            return IOUtils.toString(in);
+            return new String(in.readAllBytes());
         } finally {
-            IOUtils.closeQuietly(in);
+            try {
+                if (in != null) {
+                    in.close();
+                }
+            } catch (IOException ioe) {
+                // ignore
+            }
         }
     }
 
